Simplify reading spans. Add reader attribute Add huge string tests

--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\Junior\Junior.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Files\" />
+  </ItemGroup>
+
 </Project>
